feat: Atualizando para o Java 21 e Spring 3.5