@@ -3,31 +3,21 @@ package com.example.algamoney.api.config;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import javax.crypto.spec.SecretKeySpec;
 
 import com.example.algamoney.api.config.property.AlgamoneyApiProperty;
-import com.nimbusds.jose.jwk.source.JWKSource;
-import com.nimbusds.jose.proc.SecurityContext;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
-import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.OAuth2AuthorizationServerConfiguration;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
-import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.oauth2.jwt.JwtDecoder;
-import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
@@ -36,68 +26,63 @@ import org.springframework.util.StringUtils;
 @Profile("oauth-security")
 @Configuration
 @EnableWebSecurity
-@EnableGlobalMethodSecurity(prePostEnabled = true)
+@EnableMethodSecurity
 public class ResourceServerConfig {
 
-	@Autowired
-	private AlgamoneyApiProperty algamoneyApiProperty;
+    @Autowired
+    private AlgamoneyApiProperty algamoneyApiProperty;
 
     @Bean
     public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
-        http.authorizeRequests()
-                .antMatchers("/categorias").permitAll()
-                .anyRequest().authenticated()
-            .and()
-                .csrf().disable()
-                .oauth2ResourceServer().jwt().jwtAuthenticationConverter(jwtAuthenticationConverter());
-		http.logout(
-			logoutConfig -> {
-				logoutConfig.logoutSuccessHandler(
-						(httpServletRequest, httpServletResponse, authentication) -> {
-							String returnTo = httpServletRequest.getParameter("returnTo");
+        http.authorizeHttpRequests(authz -> authz
+                        .requestMatchers("/categorias", "/login", "/oauth2/**").permitAll()
+                        .anyRequest().authenticated()
+                )
+                .csrf(AbstractHttpConfigurer::disable)
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
+                )
+                .logout(logoutConfig -> logoutConfig.logoutSuccessHandler(
+                        (httpServletRequest, httpServletResponse, authentication) -> {
+                            String returnTo = httpServletRequest.getParameter("returnTo");
 
-							if (!StringUtils.hasText(returnTo)) {
-								returnTo = algamoneyApiProperty.getSeguranca().getAuthServerUrl();
-							}
+                            if (!StringUtils.hasText(returnTo)) {
+                                returnTo = algamoneyApiProperty.getSeguranca().getAuthServerUrl();
+                            }
 
-							httpServletResponse.setStatus(302);
-							httpServletResponse.sendRedirect(returnTo);
-						}
-				);
-			}
-		);
-        return http.formLogin(Customizer.withDefaults()).build();
-    }
+                            httpServletResponse.setStatus(302);
+                            httpServletResponse.sendRedirect(returnTo);
+                        }
+                ))
+                .formLogin(Customizer.withDefaults());
 
-    @Bean
-    public JwtDecoder jwtDecoder(JWKSource<SecurityContext> jwkSource) {
-        return OAuth2AuthorizationServerConfiguration.jwtDecoder(jwkSource);
+        return http.build();
     }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-    
+
     private JwtAuthenticationConverter jwtAuthenticationConverter() {
-		JwtAuthenticationConverter jwtAuthenticationConverter = new JwtAuthenticationConverter();
-		jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(jwt -> {
-			List<String> authorities = jwt.getClaimAsStringList("authorities");
+        JwtAuthenticationConverter jwtAuthenticationConverter = new JwtAuthenticationConverter();
+        jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(jwt -> {
+            List<String> authorities = jwt.getClaimAsStringList("authorities");
 
-			if (authorities == null) {
-				authorities = Collections.emptyList();
-			}
+            if (authorities == null) {
+                authorities = Collections.emptyList();
+            }
 
-			JwtGrantedAuthoritiesConverter scopesAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
-			Collection<GrantedAuthority> grantedAuthorities = scopesAuthoritiesConverter.convert(jwt);
+            JwtGrantedAuthoritiesConverter scopesAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
+            Collection<GrantedAuthority> grantedAuthorities = scopesAuthoritiesConverter.convert(jwt);
 
-			grantedAuthorities.addAll(authorities.stream()
-					.map(SimpleGrantedAuthority::new)
-					.collect(Collectors.toList()));
+            grantedAuthorities.addAll(authorities.stream()
+                    .map(SimpleGrantedAuthority::new)
+                    .toList());
 
-			return grantedAuthorities;
-		});
+            return grantedAuthorities;
+        });
 
-		return jwtAuthenticationConverter;
-	}
+        return jwtAuthenticationConverter;
+    }
 }
